force-app/main/default/objects/Campaign/fields/ADR_Set__c.field-meta.xml
<CustomField>
    <fullName>ADR_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADR Contact no Set</label>
    <type>Checkbox</type>
</CustomField>