force-app/main/default/objects/Campaign/fields/Agreed_to_Terms_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Terms_of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed to Terms of Service</label>
    <type>Checkbox</type>
</CustomField>