force-app/main/default/objects/Campaign/fields/Ambassador__Ambassador_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__Ambassador_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ambassador Campaign</label>
    <referenceTo>Ambassador__Ambassador_Campaign__c</referenceTo>
    <relationshipLabel>Connected Salesforce Campaign</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>