force-app/main/default/objects/Campaign/fields/Assets_Link__c.field-meta.xml
<CustomField>
    <fullName>Assets_Link__c</fullName>
    <formula>IF( ISBLANK( Referral_Partner_ID__c ) , null , HYPERLINK( &#39;http://www.solutionreach.com/COMPANY/Partner-Affiliate-Links?affid=Affiliate-DR&amp;affname=&#39; &amp; Referral_Partner_ID__c , &#39;http://www.solutionreach.com/COMPANY/Partner-Affiliate-Links?affid=Affiliate-DR&amp;affname=&#39; &amp; Referral_Partner_ID__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assets Link</label>
    <type>Text</type>
</CustomField>