force-app/main/default/objects/Campaign/fields/CI_From_Task__c.field-meta.xml
<CustomField>
    <fullName>CI_From_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CI From Task</label>
    <type>Checkbox</type>
</CustomField>