force-app/main/default/objects/Campaign/fields/Default_CI_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_CI_Type__c</fullName>
    <label>Default CI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SR</fullName>
                <default>true</default>
                <label>SR</label>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>