force-app/main/default/objects/Campaign/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please use other campaign.  This is a duplicate campaign.</inlineHelpText>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>