force-app/main/default/objects/Campaign/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <formula>IF( ISPICKVAL( Type , &quot;Trade Show/Event&quot; ) , IF( StartDate &gt;= Today()-14 , true, false ) , true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter</label>
    <type>Checkbox</type>
</CustomField>