force-app/main/default/objects/Campaign/fields/Five9__Five9CallNow__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9CallNow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets Five9 callNowMode to &#39;ANY&#39;</description>
    <inlineHelpText>All new campaign members are added to Five9 list with &#39;call now mode&#39; set to &#39;ANY&#39;</inlineHelpText>
    <label>Five9 Call Now</label>
    <type>Checkbox</type>
</CustomField>