force-app/main/default/objects/Campaign/fields/Five9__Five9list__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9list__c</fullName>
    <description>Five9 dialing list name</description>
    <inlineHelpText>Standard Five9 Sync (not LSP-compatible)</inlineHelpText>
    <label>Five9list</label>
    <length>50</length>
    <type>Text</type>
</CustomField>