force-app/main/default/objects/Campaign/fields/Five9LSP__F9PS_List__c.field-meta.xml
<CustomField>
    <fullName>Five9LSP__F9PS_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Five9 List</label>
    <referenceTo>Five9LSP__Five9_List__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>