force-app/main/default/objects/Campaign/fields/Free_Months_Setting__c.field-meta.xml
<CustomField>
    <fullName>Free_Months_Setting__c</fullName>
    <label>Free Months Setting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>free_months__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Extend Contract - At the Beginning</fullName>
            </value>
            <value>
                <fullName>Include in Contract Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>