force-app/main/default/objects/Campaign/fields/Has_Been_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Contacted</label>
    <type>Checkbox</type>
</CustomField>