force-app/main/default/objects/Campaign/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Non-Medical</fullName>
            </value>
            <value>
                <fullName>Physical Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>