force-app/main/default/objects/Campaign/fields/Leads_Re_Warmed__c.field-meta.xml
<CustomField>
    <fullName>Leads_Re_Warmed__c</fullName>
    <label>Leads Re-Warmed</label>
    <summaryFilterItems>
        <field>Campaign_Influence__c.Lead_Re_warmed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Influence__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>