force-app/main/default/objects/Campaign/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Box should be checked if prospects have not yet shown interest. (ie. Attendee Lists, Partner Member Lists, etc.)</inlineHelpText>
    <label>List</label>
    <type>Checkbox</type>
</CustomField>