force-app/main/default/objects/Campaign/fields/New_Leads_Created__c.field-meta.xml
<CustomField>
    <fullName>New_Leads_Created__c</fullName>
    <label>New Leads Created</label>
    <summaryFilterItems>
        <field>Campaign_Influence__c.New_Lead_Created__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Influence__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>