force-app/main/default/objects/Campaign/fields/Orphaned_Leads__c.field-meta.xml
<CustomField>
    <fullName>Orphaned_Leads__c</fullName>
    <label>Orphaned Leads</label>
    <summaryFilterItems>
        <field>Campaign_Influence__c.Orphaned__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Influence__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>