force-app/main/default/objects/Campaign/fields/Product_1_Name1__c.field-meta.xml
<CustomField>
    <fullName>Product_1_Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 1 Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaigns (Product 1)</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>