force-app/main/default/objects/Campaign/fields/Product_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_1_Name__c</fullName>
    <label>Product 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>