force-app/main/default/objects/Campaign/fields/Product_2_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 2 Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaigns (Product 2 Name)</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>