force-app/main/default/objects/Campaign/fields/Product_2_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_2_Sale_Price__c</fullName>
    <label>Product 2 Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>