force-app/main/default/objects/Campaign/fields/Promo_Product1__c.field-meta.xml
<CustomField>
    <fullName>Promo_Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaigns (Promo Product)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>