force-app/main/default/objects/Campaign/fields/Promo_Product__c.field-meta.xml
<CustomField>
    <fullName>Promo_Product__c</fullName>
    <label>Promo Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>