force-app/main/default/objects/Campaign/fields/Referral_Partner_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Contract_Date__c</fullName>
    <label>Referral Partner Contract Date</label>
    <type>Date</type>
</CustomField>