force-app/main/default/objects/Campaign/fields/Referral_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_ID__c</fullName>
    <externalId>true</externalId>
    <label>Referral Partner ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>