force-app/main/default/objects/Campaign/fields/Referral_Partner_ID_num__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_ID_num__c</fullName>
    <formula>right( Referral_Partner_ID__c , 5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Partner ID #</label>
    <type>Text</type>
</CustomField>