force-app/main/default/objects/Campaign/fields/Related_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Referral Partner Customer Account)</relationshipLabel>
    <relationshipName>ReferralPartnerCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>