force-app/main/default/objects/Campaign/fields/Related_Customer_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer_Subscriber_ID__c</fullName>
    <formula>Related_Customer_Account__r.Subscriber_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Customer Subscriber ID</label>
    <type>Text</type>
</CustomField>