force-app/main/default/objects/Campaign/fields/Related_Partner__c.field-meta.xml
<CustomField>
    <fullName>Related_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Related Partner)</relationshipLabel>
    <relationshipName>Campaigns_Related_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>