force-app/main/default/objects/Campaign/fields/Sandbox_Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Migration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sandbox Migration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>