force-app/main/default/objects/Campaign/fields/Speaker_KOL__c.field-meta.xml
<CustomField>
    <fullName>Speaker_KOL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker/KOL</label>
    <type>Checkbox</type>
</CustomField>