force-app/main/default/objects/Campaign/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub-Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Audiology</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Cardiolgy</fullName>
            </value>
            <value>
                <fullName>Chiropractic</fullName>
            </value>
            <value>
                <fullName>Cosmetic Surgery</fullName>
            </value>
            <value>
                <fullName>Cosmetology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diabetes Clinic</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Endodontistry</fullName>
            </value>
            <value>
                <fullName>ENT-Otolaryngology</fullName>
            </value>
            <value>
                <fullName>Event Coordination</fullName>
            </value>
            <value>
                <fullName>Floral</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Dentistry</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Internist</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Medical Clinic</fullName>
            </value>
            <value>
                <fullName>Medical Spa</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Non-medical</fullName>
            </value>
            <value>
                <fullName>OB/Gyn or Womens Center</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Optometry</fullName>
            </value>
            <value>
                <fullName>Oral Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>