force-app/main/default/objects/Campaign/fields/Sugar_Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Owner_Username__c</fullName>
    <label>Sugar Owner Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>