force-app/main/default/objects/Campaign/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <inlineHelpText>Team that generated the lead.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing/SDR</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Customer Marketing</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Business Operations</fullName>
                <isActive>false</isActive>
                <label>Business Operations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>