force-app/main/default/objects/Campaign/fields/Team_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Team_Attendance__c</fullName>
    <label>Team Attendance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outside Sales</fullName>
            </value>
            <value>
                <fullName>Extended Sales</fullName>
            </value>
            <value>
                <fullName>KOL/BD</fullName>
            </value>
            <value>
                <fullName>Partner Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>