force-app/main/default/objects/Campaign/fields/Total_New_Re_Warmed__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Re_Warmed__c</fullName>
    <formula>New_Leads_Created__c +  Leads_Re_Warmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total New/Re-Warmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>