force-app/main/default/objects/Campaign/fields/Total_Touch_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Touch_Points__c</fullName>
    <label>Total Touch Points</label>
    <summaryForeignKey>Campaign_Influence__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>