force-app/main/default/objects/Campaign/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <formula>IF( ISBLANK( Referral_Partner_ID__c ) , null , HYPERLINK(&quot;https://www.solutionreach.com/referral-partner-demo?affiliate_id__c=&quot; &amp; Referral_Partner_ID__c
, &quot;https://www.solutionreach.com/referral-partner-demo?affiliate_id__c=&quot; &amp; Referral_Partner_ID__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>