force-app/main/default/objects/Campaign/fields/Trial_Period__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period__c</fullName>
    <label>Trial Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Waived</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>