force-app/main/default/objects/Campaign/fields/W9_Address__c.field-meta.xml
<CustomField>
    <fullName>W9_Address__c</fullName>
    <label>W9 Address</label>
    <type>TextArea</type>
</CustomField>