force-app/main/default/objects/Campaign/fields/W9_Pay_to_Name__c.field-meta.xml
<CustomField>
    <fullName>W9_Pay_to_Name__c</fullName>
    <label>W9 Pay to Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>