force-app/main/default/objects/Campaign/fields/X1099_or_W9_Status__c.field-meta.xml
<CustomField>
    <fullName>X1099_or_W9_Status__c</fullName>
    <label>1099 or W9 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>