force-app/main/default/objects/Campaign/validationRules/Campaign_Name_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Name_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>CI_From_Task__c &amp;&amp;
ISCHANGED( Name ) &amp;&amp;
 $User.Email != &quot;randy@solutionreach.com&quot;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Campaign Name is locked for this Campaign</errorMessage>
</ValidationRule>