force-app/main/default/objects/Campaign/validationRules/Monthly_Service_Fee_Price_Product1.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Service_Fee_Price_Product1</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;Sales Manager&quot; &amp;&amp;  
CONTAINS(  Product_1_Name1__r.ProductCode , &quot;MSF&quot;) &amp;&amp; 
( OR (Product_1_Sales_Price__c &lt;= 359, 
ISNULL( Product_1_Sales_Price__c)))</errorConditionFormula>
    <errorDisplayField>Product_1_Sales_Price__c</errorDisplayField>
    <errorMessage>Please insert a value higher than $359.</errorMessage>
</ValidationRule>