force-app/main/default/objects/Campaign/validationRules/Monthly_Service_Fee_Price_Product2.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Service_Fee_Price_Product2</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;Sales Manager&quot; &amp;&amp;
CONTAINS(  Product_2_Name_2__r.ProductCode  , &quot;MSF&quot;) 
&amp;&amp; (OR ( Product_2_Sale_Price__c  &lt;= 359, ISNULL(Product_2_Sale_Price__c)))</errorConditionFormula>
    <errorDisplayField>Product_2_Sale_Price__c</errorDisplayField>
    <errorMessage>Please insert a value higher than $359.</errorMessage>
</ValidationRule>