force-app/main/default/objects/Campaign/validationRules/Setup_Fee_Price_Product2.validationRule-meta.xml
<ValidationRule>
    <fullName>Setup_Fee_Price_Product2</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; 
$Profile.Name &lt;&gt; &quot;Sales Manager&quot; &amp;&amp;
CONTAINS( Product_2_Name_2__r.ProductCode , &quot;SF&quot;)
&amp;&amp; (OR ( Product_2_Sale_Price__c &lt;= 199, ISNULL(Product_2_Sale_Price__c)))</errorConditionFormula>
    <errorDisplayField>Product_2_Sale_Price__c</errorDisplayField>
    <errorMessage>Please insert a value higher than $199.</errorMessage>
</ValidationRule>