force-app/main/default/objects/Campaign/listViews/Five9_List_Sync_Campaigns.listView-meta.xml
<ListView>
    <fullName>Five9_List_Sync_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>Five9__Five9list__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Five9__Five9CallNow__c</columns>
    <columns>Five9__Five9ReportEmail__c</columns>
    <columns>Five9__Five9User__c</columns>
    <columns>Five9__Five9Password__c</columns>
    <columns>Five9__Five9Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Five9</value>
    </filters>
    <label>Five9 List Sync Campaigns</label>
    <sharedTo>
        <role>Sales_Operations</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>