force-app/main/default/objects/Campaign/listViews/Last_Month_Campaigns_non_Tradeshow.listView-meta.xml
<ListView>
    <fullName>Last_Month_Campaigns_non_Tradeshow</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Sub_Type__c</columns>
    <columns>Total_Touch_Points__c</columns>
    <columns>New_Leads_Created__c</columns>
    <columns>Leads_Re_Warmed__c</columns>
    <columns>Total_New_Re_Warmed__c</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Pricing,Partner,Referral Partner</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>notContain</operation>
        <value>Referral</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Trade Show/Event,Other Referral,List Upload</value>
    </filters>
    <label>This Year Campaigns (non-Tradeshow)</label>
</ListView>