force-app/main/default/objects/Campaign/listViews/Last_Month_s_Campaigns_non_Tradeshow.listView-meta.xml
<ListView>
    <fullName>Last_Month_s_Campaigns_non_Tradeshow</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>notEqual</operation>
        <value>Trade Show/Event</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>notContain</operation>
        <value>Referral</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Next Month&#39;s Campaigns (non-Tradeshow)</label>
</ListView>